crates/reinhardt-pages/tests/ui/client_form/choices/fail/manual_skipped_default.rs
use reinhardt_pages::ClientFormChoices;

#[derive(Clone, PartialEq, ClientFormChoices)]
enum ProviderMode {
	#[serde(skip)]
	Archived,
	Live,
}

impl Default for ProviderMode {
	fn default() -> Self {
		Self::Archived
	}
}

fn main() {}
